--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div id="container">
         <div id="canvas-container">
             <div id="controls">
-                <div class="control-info">💡 Drag: Move View | Shift+Drag: Rotate</div>
+                <div class="control-info">Drag: Move View</div>
                 <div class="control-info">+/- Keys: Zoom In/Out</div>
                 <div class="control-info">Hover: Node/Edge Info</div>
                 <div class="control-info">Click Steps: Filter View</div>
-                <div class="control-info">☑️ Check Edges: Show Specific</div>
+                <div class="control-info">Check Edges: Show Specific</div>
             </div>
             <div id="step-counter">Step: None Selected</div>
             <div id="tooltip"></div>
