implemented switching cases

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
             <div id="step-list"></div>
         </div>
     </div>
-    <script src="loading_script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
