--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Institutional Research</title>
+    <link rel="icon" href="space_explorer.png" type="image/png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,9 +12,9 @@
     <div id="container">
         <div id="canvas-container">
             <div id="controls">
-                <div class="control-info">Drag: Move View</div>
-                <div class="control-info">+/-: Zoom In/Out</div>
-                <div class="control-info">Hover: Node/Edge Info</div>
+                <div class="control-info"></div>
+                <div class="control-info"></div>
+                <div class="control-info"></div>
             </div>
             <div id="step-counter">Step: None Selected</div>
         </div>
